added get-linage-by-eartagid to public api
note! conversion from OAS to GraphQL behaved differently this time
probably due to bad setup of package.json
-> dependency changed?
